<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Buscomida</string>

    <!-- header navigate -->
    <string name="header">Buscomida</string>

    <!-- Integrantes -->
    <string name="william">William Ernesto Castillo Diaz</string>
    <string name="williamId">17–4068–2015</string>
    <string name="ricardo">Ricardo Ernesto Chicas Murcia</string>
    <string name="ricardoId">25–0723–2014</string>
    <string name="aaron">Aaron Alejando Reynoza Valdez</string>
    <string name="aaronId">25–0712–2015</string>
    <string name="emerson">Emerson Mauricio Rivera Avalos</string>
    <string name="emersonId">17–5074–2011</string>
    <string name="manuel">Manuel Alexander Vasquez Rafaelano</string>
    <string name="manueId">25–0081–2015</string>
    <string name="jesus">Jesus Ernesto Zelaya Garcia</string>
    <string name="jesusId">25–3033–2015</string>

    <string name="aboutText">Está aplicación fue desarrollada por: </string>

    <!-- API Key para places y maps de google -->
    <string name="api_key">AIzaSyDyLVoz3hu6ZxCty2FEGCu6umQYjB5mGts</string>

    <!-- URL API -->
    <string name="url">http://192.168.1.4:5000/</string>

    <!-- Menu navigate view -->
    <string name="search">Buscar</string>
    <string name="restaurants">Restaurantes</string>
    <string name="near">Cerca de mi</string>
    <string name="home">Inicio</string>
    <string name="exit">Cerrar sesión</string>
    <string name="about">Acerca de</string>

    <!-- Item recyclerView -->
    <string name="restaurante">Restaurante: </string>
    <string name="especialidad">Especialidad: </string>
    <string name="direccion">Direccion: </string>
    <string name="categoria">Categoria: </string>

    <!-- Toolbar Menu -->
    <string name="toolbarPreference">Preferencias</string>

    <!-- Preferences Options -->
    <string name="darkMode">Modo oscuro</string>
    <string name="map">Mapa en satélite</string>
    <string name="lite">Deshabilitar ubicación</string>

    <!-- Login -->
    <string name="user">Ingrese su usuario</string>
    <string name="pass">Ingrese su clave</string>
    <string name="ingresar">Ingresar</string>
    <string name="login">Mantener login</string>

    <!-- SnackBar -->
    <string name="snack">El usuario o la clave es incorrecta</string>
    <string name="field">Campo obligatorio</string>
    <string name="location">La ubicación ha sido desactivada</string>


</resources>
