<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".about.AboutFragment">

    <TextView
        android:id="@+id/about"
        style="@style/navigate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:text="@string/aboutText"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_member1"
        style="@style/aboutText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/william"
        app:layout_constraintBottom_toTopOf="@+id/tv_member2"
        app:layout_constraintTop_toBottomOf="@+id/about" />

    <TextView
        android:id="@+id/tv_member2"
        style="@style/aboutText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/ricardo"
        app:layout_constraintBottom_toTopOf="@+id/tv_member3"
        app:layout_constraintTop_toBottomOf="@+id/tv_member1" />

    <TextView
        android:id="@+id/tv_member3"
        style="@style/aboutText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/aaron"
        app:layout_constraintBottom_toTopOf="@id/tv_member4"
        app:layout_constraintTop_toBottomOf="@id/tv_member2" />

    <TextView
        android:id="@+id/tv_member4"
        style="@style/aboutText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/emerson"
        app:layout_constraintBottom_toTopOf="@id/tv_member5"
        app:layout_constraintTop_toBottomOf="@id/tv_member3" />

    <TextView
        android:id="@+id/tv_member5"
        style="@style/aboutText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/manuel"
        app:layout_constraintBottom_toTopOf="@id/tv_member6"
        app:layout_constraintTop_toBottomOf="@id/tv_member4" />

    <TextView
        android:id="@+id/tv_member6"
        style="@style/aboutText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/jesus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_member5" />


</androidx.constraintlayout.widget.ConstraintLayout>