<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurante"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_nombre_restaurante"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_nombre_restaurante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="RESTAURANTE"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/tv1"
        app:layout_constraintTop_toTopOf="@id/tv1"
        app:layout_constraintBottom_toBottomOf="@id/tv1"/>


    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/especialidad"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_espec_restaurante"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <TextView
        android:id="@+id/tv_espec_restaurante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="ESPECIALIDAD"
        app:layout_constraintBottom_toBottomOf="@id/tv2"
        app:layout_constraintStart_toEndOf="@+id/tv2"
        app:layout_constraintTop_toTopOf="@+id/tv2" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoria"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_cat_restaurante"
        app:layout_constraintTop_toBottomOf="@+id/tv2" />


    <TextView
        android:id="@+id/tv_cat_restaurante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CATEGORIA"
       android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/tv3"
        app:layout_constraintTop_toTopOf="@id/tv3" />


    <TextView
        android:id="@+id/tv_direcc_restaurante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="DIRECCION"
        app:layout_constraintBottom_toBottomOf="@id/tv4"
        app:layout_constraintStart_toEndOf="@+id/tv4"
       app:layout_constraintTop_toTopOf="@id/tv4" />


    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direccion"
        app:layout_constraintTop_toBottomOf="@id/tv3"
        app:layout_constraintEnd_toStartOf="@+id/tv_direcc_restaurante"
       android:layout_marginTop="24dp" />


</androidx.constraintlayout.widget.ConstraintLayout>