<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".restaurant.RestaurantFragment">


    <TextView
        android:id="@+id/tv_name_restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textColor="?attr/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_restaurant_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="50dp"
        android:text="@string/especialidad"
        android:textColor="?attr/textColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_restaurant" />

    <TextView
        android:id="@+id/tv_restaurant_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:text="@string/categoria"
        android:textColor="?attr/textColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_restaurant_1" />

    <TextView
        android:id="@+id/tv_restaurant_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:text="@string/direccion"
        android:textColor="?attr/textColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_restaurant_2" />

    <TextView
        android:id="@+id/tv_espec_restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:textColor="?attr/textColor"
        app:layout_constraintStart_toEndOf="@+id/tv_restaurant_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_restaurant" />

    <TextView
        android:id="@+id/tv_cat_restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="30dp"
        android:textColor="?attr/textColor"
        app:layout_constraintStart_toEndOf="@+id/tv_restaurant_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_espec_restaurant" />


    <TextView
        android:id="@+id/tv_direc_restaurant"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        android:text="HOLAAAAA"
        android:textColor="?attr/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.279"
        app:layout_constraintStart_toEndOf="@+id/tv_restaurant_3"
        app:layout_constraintTop_toBottomOf="@+id/tv_cat_restaurant" />

    <androidx.cardview.widget.CardView
        android:id="@+id/idCardView2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="433dp"
        android:alpha="1"
        android:background="@drawable/button_rounded"
        android:padding="8dp"
        android:visibility="visible"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_direc_restaurant">

        <fragment
            android:id="@+id/map_restaurant"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:liteMode="true" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>